--- a/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
+++ b/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
@@ -142,6 +142,7 @@
                                                         </state>
                                                         <connections>
                                                             <action selector="editLastContraction:" destination="QqC-Gy-unH" eventType="touchUpInside" id="kZe-vo-QU9"/>
+                                                            <segue destination="07H-zW-wPl" kind="modal" identifier="LastContractionEdit" modalTransitionStyle="flipHorizontal" id="wFg-P6-rVT"/>
                                                         </connections>
                                                     </button>
                                                     <view contentMode="scaleToFill" id="lLz-y6-khd">
@@ -501,7 +502,21 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ir5-eB-E1e" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="455" y="317"/>
+            <point key="canvasLocation" x="-34" y="769"/>
+        </scene>
+        <!--Contraction Edit View Controller-->
+        <scene sceneID="0Ws-Pf-X9I">
+            <objects>
+                <viewController id="07H-zW-wPl" customClass="BCContractionEditViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="z8S-Wh-Ku3">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="El5-CT-CL1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="485" y="-417"/>
         </scene>
         <!--History View Controller-->
         <scene sceneID="UIm-IZ-qPZ">
@@ -690,7 +705,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="X7B-vY-eBZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="455" y="545"/>
+            <point key="canvasLocation" x="-34" y="997"/>
         </scene>
     </scenes>
     <resources>
@@ -701,6 +716,89 @@
         <image name="orange-trash.png" width="22" height="30"/>
         <image name="start-button.png" width="61" height="81"/>
     </resources>
+    <classes>
+        <class className="BCAveragesViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCAveragesViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="averageLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="averagesScrollView" candidateClass="UIScrollView"/>
+                <relationship kind="outlet" name="fifteenMinuteDuration" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="fifteenMinuteFrequency" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="fifteenMinuteIntensity" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="fifteenMinuteNumberLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="minuteNumberScrollView" candidateClass="UIScrollView"/>
+                <relationship kind="outlet" name="oneHourDuration" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="oneHourFrequency" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="oneHourIntensity" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="pageControl" candidateClass="BCPageControl"/>
+                <relationship kind="outlet" name="sixtyMinuteNumberLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="thirtyMinuteDuration" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="thirtyMinuteFrequency" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="thirtyMinuteIntensity" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="thirtyMinuteNumberLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="BCBaseViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCBaseViewController.h"/>
+        </class>
+        <class className="BCContractionCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCContractionCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="durationLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="intensityLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="BCContractionEditViewController" superclassName="BCBaseViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCContractionEditViewController.h"/>
+        </class>
+        <class className="BCFrequencyCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCFrequencyCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="frequencyLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="BCHistoryViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCHistoryViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="contractionHistoryLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="contractionTableView" candidateClass="UITableView"/>
+                <relationship kind="outlet" name="durationHeaderLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="frequencyHeaderLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="frequencyTableView" candidateClass="UITableView"/>
+                <relationship kind="outlet" name="headerContainerView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="intensityHeaderLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="BCPageControl" superclassName="UIPageControl">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCPageControl.h"/>
+        </class>
+        <class className="BCRootViewController" superclassName="BCBaseViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCRootViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="deleteLastContraction:"/>
+                <relationship kind="action" name="editLastContraction:"/>
+                <relationship kind="action" name="lastContractionIntensityPressed:" candidateClass="UIButton"/>
+                <relationship kind="action" name="startStopContraction:"/>
+                <relationship kind="outlet" name="averagesContainerView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="durationLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="durationTitleLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="frequencyLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="frequencyTitleLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="historyContainerView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="intensityLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="intensityTitleLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="lastContractionContainerView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="lastContractionHandle" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="lastContractionIntensityContainerView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="lastContractionLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="lastContractionSlideOut" candidateClass="UIView"/>
+                <relationship kind="outlet" name="nextContractionEstimateLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="startStopButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="timerBackgroundView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="timerLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
