--- a/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
+++ b/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
@@ -698,6 +698,9 @@
                                                 <state key="highlighted">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="deleteSelectedContraction:" destination="2ls-d1-09R" eventType="touchUpInside" id="Z2O-hg-Fgf"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="m5N-1I-8Fg">
                                                 <rect key="frame" x="49" y="3" width="41" height="38"/>
@@ -710,6 +713,9 @@
                                                 <state key="highlighted">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="editSelectedContraction:" destination="2ls-d1-09R" eventType="touchUpInside" id="7ay-93-57X"/>
+                                                </connections>
                                             </button>
                                             <view contentMode="scaleToFill" id="Y7M-cZ-nVs">
                                                 <rect key="frame" x="90" y="-15" width="201" height="73"/>
@@ -730,6 +736,9 @@
                                                         <state key="highlighted" title="1" backgroundImage="blue-circle-selected.png">
                                                             <color key="titleColor" red="0.74901960779999999" green="0.87843137250000003" blue="0.8862745098" alpha="1" colorSpace="deviceRGB"/>
                                                         </state>
+                                                        <connections>
+                                                            <action selector="selectedContractionIntensityPressed:" destination="2ls-d1-09R" eventType="touchUpInside" id="rHS-aw-e9r"/>
+                                                        </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="lvm-Rs-bMk">
                                                         <rect key="frame" x="42" y="22" width="29" height="30"/>
@@ -746,6 +755,9 @@
                                                         <state key="highlighted" title="2" backgroundImage="orange-circle-selected.png">
                                                             <color key="titleColor" red="0.74901960779999999" green="0.87843137250000003" blue="0.8862745098" alpha="1" colorSpace="deviceRGB"/>
                                                         </state>
+                                                        <connections>
+                                                            <action selector="selectedContractionIntensityPressed:" destination="2ls-d1-09R" eventType="touchUpInside" id="VaK-gE-0cA"/>
+                                                        </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Q8f-h2-RLa">
                                                         <rect key="frame" x="78" y="22" width="29" height="30"/>
@@ -762,6 +774,9 @@
                                                         <state key="highlighted" backgroundImage="blue-circle-selected.png">
                                                             <color key="titleColor" red="0.74901960779999999" green="0.87843137250000003" blue="0.8862745098" alpha="1" colorSpace="deviceRGB"/>
                                                         </state>
+                                                        <connections>
+                                                            <action selector="selectedContractionIntensityPressed:" destination="2ls-d1-09R" eventType="touchUpInside" id="UlY-Ed-qoN"/>
+                                                        </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="JUq-uV-3I5">
                                                         <rect key="frame" x="115" y="22" width="29" height="30"/>
@@ -778,6 +793,9 @@
                                                         <state key="highlighted" backgroundImage="blue-circle-selected.png">
                                                             <color key="titleColor" red="0.74901960779999999" green="0.87843137250000003" blue="0.8862745098" alpha="1" colorSpace="deviceRGB"/>
                                                         </state>
+                                                        <connections>
+                                                            <action selector="selectedContractionIntensityPressed:" destination="2ls-d1-09R" eventType="touchUpInside" id="5hU-Wm-QMo"/>
+                                                        </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="J62-iX-46c">
                                                         <rect key="frame" x="152" y="22" width="29" height="30"/>
@@ -794,6 +812,9 @@
                                                         <state key="highlighted" backgroundImage="blue-circle-selected.png">
                                                             <color key="titleColor" red="0.74901960779999999" green="0.87843137250000003" blue="0.8862745098" alpha="1" colorSpace="deviceRGB"/>
                                                         </state>
+                                                        <connections>
+                                                            <action selector="selectedContractionIntensityPressed:" destination="2ls-d1-09R" eventType="touchUpInside" id="PfF-C6-U8U"/>
+                                                        </connections>
                                                     </button>
                                                 </subviews>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
